--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -316,7 +316,7 @@ ul.tag-list {
 .login-page {
     background: #f9f3ee;
     width: 100vw;
-    height: 100vh;
+    height: 60vh;
     display: flex;
     flex-direction: column;
     padding-top:100px;
@@ -402,8 +402,12 @@ ul.tag-list {
     margin-top:5px;
 }
 
+.mt-2{
+    margin-top:20px;
+}
+
 .mt-4{
-    margin-top:200px;
+    margin-top:30px;
 }
 
 .mr-2{
@@ -430,7 +434,7 @@ ul.tag-list {
     color:rgb(215, 10, 10);
 }
 
-.serchButton{
+.searchButton{
     display: block;
 	margin: auto;
     width:100px;
