--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -414,6 +414,10 @@ ul.tag-list {
     margin-right:10px;
 }
 
+.ml-2{
+    margin-left:10px;
+}
+
 .list-title{
     display: inline-block;
 	width: 70%;
