表示を１秒遅らせる

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -366,7 +366,7 @@ ul.tag-list {
     height: 7em;
 }
 .loader {
-    margin: 20px auto;
+    margin: auto;
     font-size: 10px;
     position: relative;
     border-top: .4em solid rgba(255,174,0, 0.2);
