--- a/public/css/app.css
+++ b/public/css/app.css
@@ -328,7 +328,7 @@ ul.tag-list > li > a:hover {
 }
 
 .loader {
-  margin: 20px auto;
+  margin: auto;
   font-size: 10px;
   position: relative;
   border-top: 0.4em solid rgba(255, 174, 0, 0.2);
