--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -489,3 +489,33 @@ ul.tag-list {
     background: #323f02;
     color: white;
   }
+
+  .balloonoya {
+    position   : relative;                /* 指定した分だけ相対的に移動 */
+  }
+
+  .balloonoya:hover .balloon {
+    display: inline;                /* インライン要素として表示 */
+  }
+
+  .balloon {
+    position   : absolute;                /* 親要素を基準 */
+    display: none;                        /* 要素を非表示 */
+    padding: 2px;                         /* テキストの前後の余白 */
+    background-color: rgba(229, 229, 248, 0.5);       /* 背景色（透明度） */
+    width:100px;                          /* 吹き出し全体の幅 */
+    left : -10%;                           /* 表示位置 */
+    top : 100%;                           /* 表示位置 */
+    margin-top : 12px;                    /* 表示位置 */
+    font-size: 40%;                       /* 文字サイズ */
+  }
+
+  .balloon:after{
+    border-bottom: 12px solid rgba(229, 229, 248, 0.5); /* 吹き出し口の高さ・色 */
+    border-left: 10px solid transparent;    /* 吹き出し口の幅１／２ */
+    border-right: 10px solid transparent;   /* 吹き出し口の幅１／２ */
+    top: -12px;                             /* 吹き出し口の位置調整 */
+    left : 0%;                              /* 吹き出し口の横位置 */
+    content: "";                       /* コンテンツの挿入 */
+    position: absolute;                /* 親要素を基準 */
+  }
