--- a/public/css/app.css
+++ b/public/css/app.css
@@ -492,7 +492,7 @@ ul.tag-list > li > a:hover {
   border-radius: 7px;
   border-color: black;
   padding-bottom: 1px;
-  background-color: #f3f8f8;
+  background-color: whitesmoke;
   width: 200px;
   margin: 5px;
 }
