--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -525,7 +525,7 @@ ul.tag-list {
     border-radius: 7px;
     border-color: black;
     padding-bottom: 1px;
-    background-color: #f3f8f8;
+    background-color: whitesmoke;
     width:200px;
     margin:5px;
 }
