簡易編集機能追加

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -32,6 +32,12 @@ html {
     }
 }
 
+.input_short {
+    width:95%;
+    border: solid 3px #d7d2cd;
+    border-radius: 2px;
+}
+
 .task-list {
     list-style: none;
     margin: 0;
