トップ画面微調整

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -541,7 +541,7 @@ ul.tag-list {
     font-size: 15px;
     text-align: left;
     padding: 0 10px 0 10px;
-    width: 170px;
+    width: 98%;
 }
 
 .menu-text {
