--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -554,13 +554,13 @@ ul.tag-list {
 }
 
 .menu-card-inner {
-    padding: 0.5em 1em;
+    padding: 7px;
     margin: 2em 0;
     color: #232323;
     background: #fff8e8;
     border-left: solid 10px #ffc06e;
     width: 100%;
-    margin: 5px;
+    margin: 1px;
 }
 
 .menu-title {
@@ -692,8 +692,8 @@ ul.tag-list {
     }
 
     .menu-card-inner {
-        width: 300px;
-        margin: 7px;
+        width: 250px;
+        margin: 3px;
     }
 
     .middle-display-page {
