--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -584,6 +584,7 @@ ul.tag-list {
 .menu-card-wrapper > br {
     flex-basis: 100%;
     width: 0;  /* Flexboxの仕様に合わせて、この行は必要です */
+    height: 20px;
     content: '';  /* Flexboxの仕様に合わせて、この行は必要です */
 }
 
