トップ画面微調整

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -555,12 +555,11 @@ ul.tag-list {
 
 .menu-card-inner {
     padding: 7px;
-    margin: 2em 0;
     color: #232323;
     background: #fff8e8;
     border-left: solid 10px #ffc06e;
     width: 100%;
-    margin: 1px;
+    margin: 0.2px 0 0 0.5px;
 }
 
 .menu-title {
