--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,652 +1,1 @@
-@charset "UTF-8";
-*,
-*:active,
-*:hover,
-*:before,
-*:after {
-  box-sizing: border-box;
-}
-
-body,
-html {
-  padding: 0;
-  margin: 0 0 10px 0;
-}
-
-.inner {
-  max-width: 95%;
-  margin: 30px auto 0 auto;
-}
-
-.align-center {
-  text-align: center;
-}
-
-.input {
-  outline: none;
-  border: solid 3px #d7d2cd;
-  padding: 10px;
-  border-radius: 7px;
-}
-.input:focus {
-  background: #f9fff0;
-}
-
-.input_short {
-  width: 95%;
-  border: solid 3px #d7d2cd;
-  border-radius: 2px;
-}
-
-.task-list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  border-top: 1px solid #d7d2cd;
-}
-.task-list li {
-  padding: 20px 10px;
-  border-bottom: 1px solid #d7d2cd;
-  display: flex;
-  align-items: center;
-  position: relative;
-}
-.task-list li.done .linethrough {
-  text-decoration: line-through;
-}
-.task-list li label {
-  display: block;
-  cursor: pointer;
-}
-.task-list li > form,
-.task-list li > div {
-  display: block;
-  width: calc(100% - 120px);
-}
-.task-list li .btn {
-  position: absolute;
-  right: 10px;
-  width: 80px;
-  padding: 0.5em 1em 0.4em;
-  font-size: 13px;
-  z-index: 10;
-}
-.task-list li .is-cancel {
-  width: 96px;
-  background-color: #999;
-}
-.task-list li .input {
-  display: block;
-  position: relative;
-  width: 100%;
-  font-size: 15px;
-  outline: none;
-  border: solid 1px #d7d2cd;
-  padding: 7px 7px;
-  border-radius: 4px;
-  margin-top: -5px;
-}
-.task-list li .input:focus {
-  background: #f9f9f0;
-}
-
-.input-form {
-  margin-bottom: 40px;
-  background: #f9f3ee;
-  padding: 40px 0;
-  border-bottom: 1px solid #d7d2cd;
-}
-.input-form .inner {
-  display: flex;
-  position: relative;
-}
-.input-form .input {
-  width: 80%;
-  font-size: 15px;
-  outline: none;
-  border: solid 3px #d7d2cd;
-  margin-right: 10px;
-}
-.input-form .btn {
-  width: 20%;
-}
-.input-form .input.error {
-  background-color: #ffd4dd;
-  border-color: #d01137;
-}
-
-.btn {
-  font-size: 15px;
-  cursor: pointer;
-  font-weight: bold;
-  display: inline-block;
-  padding: 10px 15px;
-  text-decoration: none;
-  background: #668ad8;
-  color: #fff;
-  border: none;
-  border-bottom: solid 4px #485879;
-  border-radius: 7px;
-  outline: none;
-}
-.btn:active {
-  transform: translateY(4px);
-  border-bottom: none;
-  margin-bottom: 4px;
-}
-.btn.is-delete {
-  background-color: #d86681;
-  border-bottom-color: #956270;
-}
-
-.checkbox-input {
-  display: none;
-}
-
-.checkbox-label {
-  position: relative;
-  margin-right: 30px;
-  top: -10px;
-}
-.checkbox-label::before {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 2px;
-  left: 0;
-  width: 18px;
-  height: 18px;
-  border: 1px solid #d7d2cd;
-  border-radius: 4px;
-}
-
-.done .checkbox-label {
-  color: #999;
-}
-.done .checkbox-label::after {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 5px;
-  width: 7px;
-  height: 14px;
-  transform: rotate(40deg);
-  border-bottom: 3px solid #d01137;
-  border-right: 3px solid #d01137;
-}
-
-.global-head {
-  color: #fff;
-  background: #201402;
-  margin: 0;
-  padding: 10px;
-  position: fixed;
-  width: 100%;
-  z-index: 1000;
-}
-.global-head a {
-  color: #fff;
-  text-decoration: none;
-}
-.global-head a:hover {
-  text-decoration: underline;
-}
-.global-head ul {
-  list-style: none;
-  display: flex;
-  margin: 0;
-  padding: 0;
-}
-.global-head ul li {
-  margin: 0 10px;
-}
-.global-head ul li span {
-  cursor: pointer;
-}
-.global-head ul li span:hover {
-  text-decoration: underline;
-}
-
-.alert {
-  font-size: 14px;
-  position: fixed;
-  width: 300px;
-  right: 10px;
-  bottom: 10px;
-  color: #155724;
-  background: #d4edda;
-  border: solid 1px #c3e6cb;
-  padding: 13px;
-  border-radius: 7px;
-}
-
-ul.tag-list {
-  list-style: none;
-  margin-left: 0;
-  margin-top: -15px;
-  padding: 0;
-}
-ul.tag-list > li {
-  display: inline-block;
-  margin-left: 5px;
-  margin-bottom: 7px;
-  font-size: 93%;
-}
-ul.tag-list > li.active > a {
-  background: none;
-}
-ul.tag-list > li > a {
-  text-decoration: none;
-  background: #fce59f;
-  border: solid 3px #fce59f;
-  color: #333;
-  display: inline-block;
-  padding: 3px 13px;
-  border-radius: 20px;
-  cursor: pointer;
-}
-ul.tag-list > li > a:hover {
-  background: #fff6c6;
-  border-color: #fff6c6;
-}
-
-.login-page {
-  background: #f9f3ee;
-  width: 100vw;
-  height: 60vh;
-  display: flex;
-  flex-direction: column;
-  padding-top: 100px;
-  align-items: center;
-}
-.login-page .links {
-  margin-top: 10px;
-  font-size: 93%;
-}
-.login-page .links a {
-  color: #1b1e21;
-}
-
-.login-panel {
-  width: 500px;
-  background: #fcfaf6;
-  padding: 50px;
-  border-radius: 20px;
-  box-shadow: 2px 2px 25px #e3dfd4;
-}
-.login-panel .input-group {
-  margin-bottom: 10px;
-}
-.login-panel label {
-  font-size: 0.8em;
-  width: 100%;
-  display: block;
-}
-.login-panel .input {
-  width: 100%;
-}
-.login-panel .btn {
-  margin-top: 5px;
-}
-
-.loader,
-.loader:after {
-  border-radius: 50%;
-  width: 7em;
-  height: 7em;
-}
-
-.loader {
-  margin: auto;
-  font-size: 10px;
-  position: relative;
-  border-top: 0.4em solid rgba(255, 174, 0, 0.2);
-  border-right: 0.4em solid rgba(255, 174, 0, 0.2);
-  border-bottom: 0.4em solid rgba(255, 174, 0, 0.2);
-  border-left: 0.4em solid #ffae00;
-  transform: translateZ(0);
-  animation: load-animate 0.5s infinite linear;
-}
-
-@keyframes load-animate {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-.main_box {
-  padding: 0.5em 1em;
-  margin: 2em 0;
-  border: double 5px #4ec4d3;
-  background-color: hsl(130, 15%, 92%);
-}
-
-.main_box p {
-  margin: 0;
-  padding: 0;
-}
-
-.mt-1 {
-  margin-top: 5px;
-}
-
-.mt-2 {
-  margin-top: 15px;
-}
-
-.mt-4 {
-  margin-top: 30px;
-}
-
-.mr-1 {
-  margin-right: 5px;
-}
-
-.mr-2 {
-  margin-right: 10px;
-}
-
-.ml-2 {
-  margin-left: 10px;
-}
-
-.ml-3 {
-  margin-left: 15px;
-}
-
-.ml-4 {
-  margin-left: 20px;
-}
-
-.list-title {
-  display: inline-block;
-  width: 70%;
-}
-
-.change_mode_text {
-  text-align: center;
-  justify-content: center;
-  cursor: pointer;
-  color: rgb(15, 15, 231);
-}
-
-.body_text {
-  white-space: pre-wrap;
-}
-
-.text-warning {
-  color: rgb(215, 10, 10);
-}
-
-.searchButton {
-  display: block;
-  margin: auto;
-  width: 100px;
-}
-
-.btn-square-little-rich {
-  position: relative;
-  display: inline-block;
-  padding: 0.25em 0.5em;
-  text-decoration: none;
-  color: #fff;
-  background: #03a9f4;
-  /*色*/
-  border: solid 1px #0f9ada;
-  /*線色*/
-  border-radius: 4px;
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2);
-  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
-  width: 80px;
-}
-
-.btn-square-little-rich:active {
-  /*押したとき*/
-  border: solid 1px #03a9f4;
-  box-shadow: none;
-  text-shadow: none;
-}
-
-.btn-flat-simple {
-  position: relative;
-  display: inline-block;
-  padding: 2px;
-  text-decoration: none;
-  color: white;
-  background: rgb(24, 4, 114);
-  transition: 0.4s;
-  width: 60px;
-  font-size: 12px;
-}
-
-.btn-flat-simple:hover {
-  background: #323f02;
-  color: white;
-}
-
-.balloonoya {
-  position: relative;
-  /* 指定した分だけ相対的に移動 */
-}
-
-.balloonoya:hover .balloon {
-  display: inline;
-  /* インライン要素として表示 */
-}
-
-.balloon {
-  position: absolute;
-  /* 親要素を基準 */
-  display: none;
-  /* 要素を非表示 */
-  padding: 2px;
-  /* テキストの前後の余白 */
-  background-color: rgba(5, 19, 84, 0.5);
-  /* 背景色（透明度） */
-  width: 100px;
-  /* 吹き出し全体の幅 */
-  left: -10%;
-  /* 表示位置 */
-  top: 100%;
-  /* 表示位置 */
-  margin-top: 12px;
-  /* 表示位置 */
-  font-size: 40%;
-  /* 文字サイズ */
-  color: whitesmoke;
-}
-
-.balloon:after {
-  border-bottom: 12px solid rgba(229, 229, 248, 0.5);
-  /* 吹き出し口の高さ・色 */
-  border-left: 10px solid transparent;
-  /* 吹き出し口の幅１／２ */
-  border-right: 10px solid transparent;
-  /* 吹き出し口の幅１／２ */
-  top: -12px;
-  /* 吹き出し口の位置調整 */
-  left: 0%;
-  /* 吹き出し口の横位置 */
-  content: "";
-  /* コンテンツの挿入 */
-  position: absolute;
-  /* 親要素を基準 */
-}
-
-.title_label {
-  margin: 5px 0 0 10px;
-  font-size: 20px;
-}
-
-.top-title {
-  margin: 10px 0 10px 0;
-  font-size: 20px;
-  font-weight: bold;
-}
-
-.top-title-explain {
-  margin: 10px 0 10px 0;
-  font-size: 20px;
-}
-
-.container {
-  margin: auto;
-}
-
-.menu {
-  margin-top: 40px;
-  margin-bottom: 100px;
-  padding: 0;
-  color: #5a5d5f;
-}
-
-.text-date {
-  display: block;
-  padding-left: 10px;
-  text-align: left;
-  font-size: 15px;
-}
-
-.text-price {
-  text-align: left;
-  padding-left: 10px;
-  font-size: 15px;
-}
-
-.menu-card-inner {
-  padding: 7px;
-  color: #232323;
-  background: #fff8e8;
-  border-left: solid 10px #ffc06e;
-  width: 100%;
-  margin: 1px 0 0 0.5px;
-}
-
-.menu-title {
-  margin: 1px 0 2px 0;
-  font-size: 15px;
-  text-align: left;
-  width: 98%;
-}
-
-.menu-text {
-  text-align: left;
-  font-size: 15px;
-}
-
-.menu-card-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: 1px;
-}
-
-.menu-card-wrapper > br {
-  flex-basis: 100%;
-  width: 0; /* Flexboxの仕様に合わせて、この行は必要です */
-  height: 10px;
-  content: ""; /* Flexboxの仕様に合わせて、この行は必要です */
-}
-
-.space_box {
-  border: none;
-  height: 80px;
-}
-
-.middle-display-page {
-  font-size: 20px;
-  width: 95%;
-}
-
-.middle-display-panel {
-  background: #fcfaf6;
-  padding: 10px;
-  border-radius: 20px;
-  box-shadow: 2px 2px 25px #e3dfd4;
-}
-.middle-display-panel .input-group {
-  margin-bottom: 10px;
-}
-.middle-display-panel label {
-  font-size: 0.8em;
-  width: 100%;
-  display: block;
-}
-.middle-display-panel .input {
-  width: 90%;
-}
-.middle-display-panel .btn {
-  margin-top: 5px;
-}
-
-.modal_box {
-  background: #f9f6fc;
-  padding: 10px;
-  border-radius: 20px;
-  box-shadow: 2px 2px 25px #e3dfd4;
-  width: 100%;
-  margin: auto;
-}
-.modal_box .input-group {
-  margin-bottom: 10px;
-}
-.modal_box label {
-  font-size: 0.8em;
-  width: 100%;
-  display: block;
-}
-.modal_box .input {
-  width: 90%;
-}
-.modal_box .btn {
-  margin-top: 5px;
-}
-
-.edit_style .input {
-  width: 90%;
-}
-.edit_style .btn_short {
-  color: white;
-  font-size: 12px;
-  margin: 5px 10px 5px 0;
-  width: 70px;
-  height: 30px;
-  padding: auto;
-}
-
-@media screen and (min-width: 400px) {
-  .top-title {
-    margin: 10px 0 10px 50px;
-  }
-  .top-title-explain {
-    margin: 10px 0 10px 50px;
-  }
-  .menu-card-inner {
-    width: 45%;
-  }
-  .menu-card-wrapper {
-    margin-top: 1px;
-  }
-}
-@media screen and (min-width: 1025px) {
-  .top-title {
-    margin: 10px 0 10px 50px;
-    font-size: 30px;
-  }
-  .menu-card-wrapper {
-    margin-top: 5px;
-  }
-  .menu-card-inner {
-    width: 235px;
-    margin: 3px;
-  }
-  .middle-display-page {
-    margin: auto;
-    width: 500px;
-  }
-  .modal_box {
-    width: 50%;
-  }
-}
+*,:active,:after,:before,:hover{box-sizing:border-box}body,html{margin:0 0 10px;padding:0}.inner{margin:30px auto 0;max-width:95%}.align-center{text-align:center}.input{border:3px solid #d7d2cd;border-radius:7px;outline:none;padding:10px}.input:focus{background:#f9fff0}.input_short{border:3px solid #d7d2cd;border-radius:2px;width:95%}.task-list{border-top:1px solid #d7d2cd;list-style:none;margin:0;padding:0}.task-list li{align-items:center;border-bottom:1px solid #d7d2cd;display:flex;padding:20px 10px;position:relative}.task-list li.done .linethrough{text-decoration:line-through}.task-list li label{cursor:pointer;display:block}.task-list li>div,.task-list li>form{display:block;width:calc(100% - 120px)}.task-list li .btn{font-size:13px;padding:.5em 1em .4em;position:absolute;right:10px;width:80px;z-index:10}.task-list li .is-cancel{background-color:#999;width:96px}.task-list li .input{border:1px solid #d7d2cd;border-radius:4px;display:block;font-size:15px;margin-top:-5px;outline:none;padding:7px;position:relative;width:100%}.task-list li .input:focus{background:#f9f9f0}.input-form{background:#f9f3ee;border-bottom:1px solid #d7d2cd;margin-bottom:40px;padding:40px 0}.input-form .inner{display:flex;position:relative}.input-form .input{border:3px solid #d7d2cd;font-size:15px;margin-right:10px;outline:none;width:80%}.input-form .btn{width:20%}.input-form .input.error{background-color:#ffd4dd;border-color:#d01137}.btn{background:#668ad8;border:none;border-bottom:4px solid #485879;border-radius:7px;color:#fff;cursor:pointer;display:inline-block;font-size:15px;font-weight:700;outline:none;padding:10px 15px;text-decoration:none}.btn:active{border-bottom:none;margin-bottom:4px;transform:translateY(4px)}.btn.is-delete{background-color:#d86681;border-bottom-color:#956270}.checkbox-input{display:none}.checkbox-label{margin-right:30px;position:relative;top:-10px}.checkbox-label:before{border:1px solid #d7d2cd;border-radius:4px;content:"";display:block;height:18px;left:0;position:absolute;top:2px;width:18px}.done .checkbox-label{color:#999}.done .checkbox-label:after{border-bottom:3px solid #d01137;border-right:3px solid #d01137;content:"";display:block;height:14px;left:5px;position:absolute;top:0;transform:rotate(40deg);width:7px}.global-head{background:#201402;color:#fff;margin:0;padding:10px;position:fixed;width:100%;z-index:1000}.global-head a{color:#fff;text-decoration:none}.global-head a:hover{text-decoration:underline}.global-head ul{display:flex;list-style:none;margin:0;padding:0}.global-head ul li{margin:0 10px}.global-head ul li span{cursor:pointer}.global-head ul li span:hover{text-decoration:underline}.alert{background:#d4edda;border:1px solid #c3e6cb;border-radius:7px;bottom:10px;color:#155724;font-size:14px;padding:13px;position:fixed;right:10px;width:300px}ul.tag-list{list-style:none;margin-left:0;margin-top:-15px;padding:0}ul.tag-list>li{display:inline-block;font-size:93%;margin-bottom:7px;margin-left:5px}ul.tag-list>li.active>a{background:none}ul.tag-list>li>a{background:#fce59f;border:3px solid #fce59f;border-radius:20px;color:#333;cursor:pointer;display:inline-block;padding:3px 13px;text-decoration:none}ul.tag-list>li>a:hover{background:#fff6c6;border-color:#fff6c6}.login-page{align-items:center;background:#f9f3ee;display:flex;flex-direction:column;height:60vh;padding-top:100px;width:100vw}.login-page .links{font-size:93%;margin-top:10px}.login-page .links a{color:#1b1e21}.login-panel{background:#fcfaf6;border-radius:20px;box-shadow:2px 2px 25px #e3dfd4;padding:50px;width:500px}.login-panel .input-group{margin-bottom:10px}.login-panel label{display:block;font-size:.8em;width:100%}.login-panel .input{width:100%}.login-panel .btn{margin-top:5px}.loader,.loader:after{border-radius:50%;height:7em;width:7em}.loader{animation:load-animate .5s linear infinite;border:.4em solid rgba(255,174,0,.2);border-left-color:#ffae00;font-size:10px;margin:auto;position:relative;transform:translateZ(0)}@keyframes load-animate{0%{transform:rotate(0deg)}to{transform:rotate(1turn)}}.main_box{background-color:#e8eee9;border:5px double #4ec4d3;margin:2em 0;padding:.5em 1em}.main_box p{margin:0;padding:0}.mt-1{margin-top:5px}.mt-2{margin-top:15px}.mt-4{margin-top:30px}.mr-1{margin-right:5px}.mr-2{margin-right:10px}.ml-2{margin-left:10px}.ml-3{margin-left:15px}.ml-4{margin-left:20px}.list-title{display:inline-block;width:70%}.change_mode_text{color:#0f0fe7;cursor:pointer;justify-content:center;text-align:center}.body_text{white-space:pre-wrap}.text-warning{color:#d70a0a}.searchButton{display:block;margin:auto;width:100px}.btn-square-little-rich{background:#03a9f4;border:1px solid #0f9ada;border-radius:4px;box-shadow:inset 0 1px 0 hsla(0,0%,100%,.2);color:#fff;display:inline-block;padding:.25em .5em;position:relative;text-decoration:none;text-shadow:0 1px 0 rgba(0,0,0,.2);width:80px}.btn-square-little-rich:active{border:1px solid #03a9f4;box-shadow:none;text-shadow:none}.btn-flat-simple{background:#180472;color:#fff;display:inline-block;font-size:12px;padding:2px;position:relative;text-decoration:none;transition:.4s;width:60px}.btn-flat-simple:hover{background:#323f02;color:#fff}.balloonoya{position:relative}.balloonoya:hover .balloon{display:inline}.balloon{background-color:rgba(5,19,84,.5);color:#f5f5f5;display:none;font-size:40%;left:-10%;margin-top:12px;padding:2px;position:absolute;top:100%;width:100px}.balloon:after{border-bottom:12px solid rgba(229,229,248,.5);border-left:10px solid transparent;border-right:10px solid transparent;content:"";left:0;position:absolute;top:-12px}.title_label{font-size:20px;margin:5px 0 0 10px}.top-title{font-weight:700}.top-title,.top-title-explain{font-size:20px;margin:10px 0}.container{margin:auto}.menu{color:#5a5d5f;margin-bottom:100px;margin-top:40px;padding:0}.text-date{display:block}.text-date,.text-price{font-size:15px;padding-left:10px;text-align:left}.menu-card-inner{background:#fff8e8;border-left:10px solid #ffc06e;color:#232323;margin:1px 0 0 .5px;padding:7px;width:100%}.menu-title{margin:1px 0 2px;width:98%}.menu-text,.menu-title{font-size:15px;text-align:left}.menu-card-wrapper{display:flex;flex-wrap:wrap;margin-top:1px}.menu-card-wrapper>br{content:"";flex-basis:100%;height:10px;width:0}.space_box{border:none;height:80px}.middle-display-page{font-size:20px;width:95%}.middle-display-panel{background:#fcfaf6;border-radius:20px;box-shadow:2px 2px 25px #e3dfd4;padding:10px}.middle-display-panel .input-group{margin-bottom:10px}.middle-display-panel label{display:block;font-size:.8em;width:100%}.middle-display-panel .input{width:90%}.middle-display-panel .btn{margin-top:5px}.modal_box{background:#f9f6fc;border-radius:20px;box-shadow:2px 2px 25px #e3dfd4;margin:auto;padding:10px;width:100%}.modal_box .input-group{margin-bottom:10px}.modal_box label{display:block;font-size:.8em;width:100%}.modal_box .input{width:90%}.modal_box .btn{margin-top:5px}.edit_style .input{width:90%}.edit_style .btn_short{color:#fff;font-size:12px;height:30px;margin:5px 10px 5px 0;padding:auto;width:70px}@media screen and (min-width:400px){.top-title,.top-title-explain{margin:10px 0 10px 50px}.menu-card-inner{width:45%}.menu-card-wrapper{margin-top:1px}}@media screen and (min-width:1025px){.top-title{font-size:30px;margin:10px 0 10px 50px}.menu-card-wrapper{margin-top:5px}.menu-card-inner{margin:3px;width:235px}.middle-display-page{margin:auto;width:500px}.modal_box{width:50%}}
